# Freearm

./: CMakeLists.txt  I2Cdev.cpp  MPU6050.cpp  Toolchain-rpi.cmake  gyroCommunication.cpp  i2c_read.c  main.cpp
Headers/: I2Cdev.h  gyroCommunication.h  i2c_read.h  libusbi.h
cmake/: build_freearm.sh
